Rendering window is displaying wrongly result during rendering. #93155

Closed
opened 2021-11-17 12:25:01 +01:00 by Erick (Arkadiusz Pych) · 24 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.76

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-16 22:49, hash: f829b86039
Worked: (newest version of Blender that worked as expected)

Short description of error
Rendering window is displaying wrongly result during rendering when world background is transparent with shadow catcher and tile size 128 or 256.
After render is finished, rendered image is normal and not corrupted

Exact steps for others to reproduce the error

Outliner -> Plane (selected)
Object properties -> Visibility -> Shadow catcher "on"

Render engine: Cycles
Device GPU Compute
Render properties -> Render -> Max sample 32; Denoise "on"
Film -> Transparent "on"
Performance -> Memory -> Auto Tiles "on"; Tile size 128 or 256

[Based on the default startup or an attached .blend file (as simple as possible)]
bug.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.76 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-16 22:49, hash: `f829b86039` Worked: (newest version of Blender that worked as expected) **Short description of error** Rendering window is displaying wrongly result during rendering when world background is transparent with shadow catcher and tile size 128 or 256. After render is finished, rendered image is normal and not corrupted **Exact steps for others to reproduce the error** Outliner -> Plane (selected) Object properties -> Visibility -> Shadow catcher "on" Render engine: Cycles Device GPU Compute Render properties -> Render -> Max sample 32; Denoise "on" Film -> Transparent "on" Performance -> Memory -> Auto Tiles "on"; Tile size 128 or 256 [Based on the default startup or an attached .blend file (as simple as possible)] [bug.blend](https://archive.blender.org/developer/F11818898/bug.blend)

Added subscriber: @aron16DotOne

Added subscriber: @aron16DotOne
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Thank you for the report.

It isn’t clear what you mean by “wrongly.” Can you please take a screenshot during rendering and afterwards, and upload them here showing the difference?

Thank you for the report. It isn’t clear what you mean by “wrongly.” Can you please take a screenshot during rendering and afterwards, and upload them here showing the difference?

Added subscriber: @brecht

Added subscriber: @brecht

I didn't see anything necessarily wrong testing this on Linux with an RTX A6000.

What I did see is that for every tile, it shows the results from rendering 1 sample, which is very noisy and looks a bit odd. Maybe that can be improved but I wouldn't call it corrupted, so I'm not sure if that is what you are seeing.

I didn't see anything necessarily wrong testing this on Linux with an RTX A6000. What I did see is that for every tile, it shows the results from rendering 1 sample, which is very noisy and looks a bit odd. Maybe that can be improved but I wouldn't call it corrupted, so I'm not sure if that is what you are seeing.

Hi, I did the screenshots. I stacked 4 photos one under another in to one picture. Picture also contain arrows and short info about tile size.
Currently for work i am using 2.93.6 now. And such problem doesn't exist over there.
As you can see I am using bit old Nvidia card with Cuda.
rendering.jpg

What I see and kind of trying to understand it is like rendering tile square doesn't display properly result in real time in the screen (and this only happens with transparent parts) and later moves to another tile leavening behind this unfinished look.
Now I know when I let render finish final render will be correct without any this kind of artefacts.
When I saw this for the first time, I thought my rendering is corrupted with such unfinished tiles so I stopped rendering.

Hi, I did the screenshots. I stacked 4 photos one under another in to one picture. Picture also contain arrows and short info about tile size. Currently for work i am using 2.93.6 now. And such problem doesn't exist over there. As you can see I am using bit old Nvidia card with Cuda. ![rendering.jpg](https://archive.blender.org/developer/F11822338/rendering.jpg) What I see and kind of trying to understand it is like rendering tile square doesn't display properly result in real time in the screen (and this only happens with transparent parts) and later moves to another tile leavening behind this unfinished look. Now I know when I let render finish final render will be correct without any this kind of artefacts. When I saw this for the first time, I thought my rendering is corrupted with such unfinished tiles so I stopped rendering.

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

I still can't reproduce this. Maybe someone in the bug triaging team can reproduce it?

I still can't reproduce this. Maybe someone in the bug triaging team can reproduce it?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Not seeing this either

**System Information**
Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.34.9000 64 Bits
Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.31
version: 3.1.0 Alpha, branch: master, commit date: 2021-11-21 16:37, hash: `rBfb470c256aac` also checked rB7e82c840b7a4
Not seeing this either ``` **System Information** Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.34.9000 64 Bits Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.31 version: 3.1.0 Alpha, branch: master, commit date: 2021-11-21 16:37, hash: `rBfb470c256aac` also checked rB7e82c840b7a4 ```
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Contributor

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Contributor

I can confirm with his bug.blend in Blender 3.0 and Blender 3.1. The trick is to enable either CUDA+CPU or OPTIX+CPU.
system-info.txt
2021-11-22 23_55_09-Blender_ [C__Users_raimu_Downloads_bug.blend].png

I can confirm with his bug.blend in Blender 3.0 and Blender 3.1. The trick is to enable either CUDA+CPU or OPTIX+CPU. [system-info.txt](https://archive.blender.org/developer/F11858314/system-info.txt) ![2021-11-22 23_55_09-Blender_ [C__Users_raimu_Downloads_bug.blend].png](https://archive.blender.org/developer/F11858456/2021-11-22_23_55_09-Blender___C__Users_raimu_Downloads_bug.blend_.png)

Added subscriber: @Sergey

Added subscriber: @Sergey

CC @Sergey

CC @Sergey

@brecht Thanks for bringing my attention. Unfortunately I can not reproduce neither of the issues here. For the 1st sample only visible, can you try P2615 to see whether it is caused by timing which makes it so no update i scheduled?

For the corrupter tile display, does it only happen when rendering to new window, or is also happening when rendering into fullscreen/image editor ?

@brecht Thanks for bringing my attention. Unfortunately I can not reproduce neither of the issues here. For the 1st sample only visible, can you try [P2615](https://archive.blender.org/developer/P2615.txt) to see whether it is caused by timing which makes it so no update i scheduled? For the corrupter tile display, does it only happen when rendering to new window, or is also happening when rendering into fullscreen/image editor ?
Contributor

For the corrupter tile display, does it only happen when rendering to new window, or is also happening when rendering into fullscreen/image editor ?

It is also happening when rendering into the image editor. What do you mean with "fullscreen"?

> For the corrupter tile display, does it only happen when rendering to new window, or is also happening when rendering into fullscreen/image editor ? It is also happening when rendering into the image editor. What do you mean with "fullscreen"?

Oops, is called "Maximized area".

Oops, is called "Maximized area".

@Sergey, P2615 does not change anything as far as I can tell.

@Sergey, [P2615](https://archive.blender.org/developer/P2615.txt) does not change anything as far as I can tell.
Sergey Sharybin self-assigned this 2021-11-24 16:23:18 +01:00

Ah, i see now. The 1st sample thing mentioned by Brecht is how it is currently expected to work: 1st sample is shown very quickly, and then at the next render work the tile is done and displayed at final number of samples, but the highlight is moved to the next tile. With such quick rendering I'm not sure we can do anything without hurting render time.

For the originally reported issue I can reproduce it now once I've realized having CPU+GPU rendering is essential to reproduce the issue.

Ah, i see now. The 1st sample thing mentioned by Brecht is how it is currently expected to work: 1st sample is shown very quickly, and then at the next render work the tile is done and displayed at final number of samples, but the highlight is moved to the next tile. With such quick rendering I'm not sure we can do anything without hurting render time. For the originally reported issue I can reproduce it now once I've realized having CPU+GPU rendering is essential to reproduce the issue.

This issue was referenced by blender/cycles@2c99ca1eb8

This issue was referenced by blender/cycles@2c99ca1eb8da6d787ba7423448e80f37485417f2

This issue was referenced by 726bc3a46b

This issue was referenced by 726bc3a46b2fcf6ba36c3e3484b344340f83e53e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
7 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#93155
No description provided.